exports[`no-callback-and-promise > invalid(1): import {test, beforeEach} from 'node:test';\ntest(\"x\", async (t, done) => { done(); }); 1`] = `

  1 | import {test, beforeEach} from 'node:test';
  2 | test("x", async (t, done) => { done(); });

`;

exports[`no-callback-and-promise > invalid(1): import {test, beforeEach} from 'node:test';\ntest(\"x\", async (t, done) => { done(); }); 2`] = `

Message:
  1 | import {test, beforeEach} from 'node:test';
> 2 | test("x", async (t, done) => { done(); });
    |                     ^^^^ A test cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(10): import * as nodeTest from 'node:test';\nnodeTest.test(\"x\", async (t, done) => { done(); }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test("x", async (t, done) => { done(); });

`;

exports[`no-callback-and-promise > invalid(10): import * as nodeTest from 'node:test';\nnodeTest.test(\"x\", async (t, done) => { done(); }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test("x", async (t, done) => { done(); });
    |                              ^^^^ A test cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(11): import {test, beforeEach} from 'node:test';\ntest(\"x\", async (t, done, extra) => { done(); }); 1`] = `

  1 | import {test, beforeEach} from 'node:test';
  2 | test("x", async (t, done, extra) => { done(); });

`;

exports[`no-callback-and-promise > invalid(11): import {test, beforeEach} from 'node:test';\ntest(\"x\", async (t, done, extra) => { done(); }); 2`] = `

Message:
  1 | import {test, beforeEach} from 'node:test';
> 2 | test("x", async (t, done, extra) => { done(); });
    |                     ^^^^ A test cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(12): import {test, beforeEach} from 'node:test';\ntest(\"x\", async (t, done): Promise<void> => { done(); }); 1`] = `

  1 | import {test, beforeEach} from 'node:test';
  2 | test("x", async (t, done): Promise<void> => { done(); });

`;

exports[`no-callback-and-promise > invalid(12): import {test, beforeEach} from 'node:test';\ntest(\"x\", async (t, done): Promise<void> => { done(); }); 2`] = `

Message:
  1 | import {test, beforeEach} from 'node:test';
> 2 | test("x", async (t, done): Promise<void> => { done(); });
    |                     ^^^^ A test cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(13): import {test, beforeEach} from 'node:test';\ntest(\"x\", async (t, done?: () => void) => { done(); }); 1`] = `

  1 | import {test, beforeEach} from 'node:test';
  2 | test("x", async (t, done?: () => void) => { done(); });

`;

exports[`no-callback-and-promise > invalid(13): import {test, beforeEach} from 'node:test';\ntest(\"x\", async (t, done?: () => void) => { done(); }); 2`] = `

Message:
  1 | import {test, beforeEach} from 'node:test';
> 2 | test("x", async (t, done?: () => void) => { done(); });
    |                     ^^^^^^^^^^^^^^^^^ A test cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(14): import {test} from 'node:test';\ntest('p', async t => { await t.test('a', async (sub, done) => { done(); }); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('p', async t => { await t.test('a', async (sub, done) => { done(); }); });

`;

exports[`no-callback-and-promise > invalid(14): import {test} from 'node:test';\ntest('p', async t => { await t.test('a', async (sub, done) => { done(); }); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', async t => { await t.test('a', async (sub, done) => { done(); }); });
    |                                                      ^^^^ A test cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(15): import {test} from 'node:test';\ntest('p', t => { t.beforeEach(async (sub, done) => {}); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('p', t => { t.beforeEach(async (sub, done) => {}); });

`;

exports[`no-callback-and-promise > invalid(15): import {test} from 'node:test';\ntest('p', t => { t.beforeEach(async (sub, done) => {}); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', t => { t.beforeEach(async (sub, done) => {}); });
    |                                           ^^^^ A hook cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(16): import {test, getTestContext} from 'node:test';\ntest('p', async () => { await getTestContext().test('a', async (sub, done) => {}); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('p', async () => { await getTestContext().test('a', async (sub, done) => {}); });

`;

exports[`no-callback-and-promise > invalid(16): import {test, getTestContext} from 'node:test';\ntest('p', async () => { await getTestContext().test('a', async (sub, done) => {}); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('p', async () => { await getTestContext().test('a', async (sub, done) => {}); });
    |                                                                      ^^^^ A test cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(17): import {test, getTestContext} from 'node:test';\ntest('p', t => { getTestContext().beforeEach(async (sub, done) => {}); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('p', t => { getTestContext().beforeEach(async (sub, done) => {}); });

`;

exports[`no-callback-and-promise > invalid(17): import {test, getTestContext} from 'node:test';\ntest('p', t => { getTestContext().beforeEach(async (sub, done) => {}); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('p', t => { getTestContext().beforeEach(async (sub, done) => {}); });
    |                                                          ^^^^ A hook cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(2): import {test, beforeEach} from 'node:test';\ntest(\"x\", async function (t, done) { done(); }); 1`] = `

  1 | import {test, beforeEach} from 'node:test';
  2 | test("x", async function (t, done) { done(); });

`;

exports[`no-callback-and-promise > invalid(2): import {test, beforeEach} from 'node:test';\ntest(\"x\", async function (t, done) { done(); }); 2`] = `

Message:
  1 | import {test, beforeEach} from 'node:test';
> 2 | test("x", async function (t, done) { done(); });
    |                              ^^^^ A test cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(3): import {test, beforeEach} from 'node:test';\nbeforeEach(async (t, done) => { done(); }); 1`] = `

  1 | import {test, beforeEach} from 'node:test';
  2 | beforeEach(async (t, done) => { done(); });

`;

exports[`no-callback-and-promise > invalid(3): import {test, beforeEach} from 'node:test';\nbeforeEach(async (t, done) => { done(); }); 2`] = `

Message:
  1 | import {test, beforeEach} from 'node:test';
> 2 | beforeEach(async (t, done) => { done(); });
    |                      ^^^^ A hook cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(4): import {test, beforeEach} from 'node:test';\nbeforeEach(async (t, done) => { done(); }, {timeout: 1000}); 1`] = `

  1 | import {test, beforeEach} from 'node:test';
  2 | beforeEach(async (t, done) => { done(); }, {timeout: 1000});

`;

exports[`no-callback-and-promise > invalid(4): import {test, beforeEach} from 'node:test';\nbeforeEach(async (t, done) => { done(); }, {timeout: 1000}); 2`] = `

Message:
  1 | import {test, beforeEach} from 'node:test';
> 2 | beforeEach(async (t, done) => { done(); }, {timeout: 1000});
    |                      ^^^^ A hook cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(5): import {before} from 'node:test';\nbefore(async (t, done) => { done(); }, {timeout: 1}); 1`] = `

  1 | import {before} from 'node:test';
  2 | before(async (t, done) => { done(); }, {timeout: 1});

`;

exports[`no-callback-and-promise > invalid(5): import {before} from 'node:test';\nbefore(async (t, done) => { done(); }, {timeout: 1}); 2`] = `

Message:
  1 | import {before} from 'node:test';
> 2 | before(async (t, done) => { done(); }, {timeout: 1});
    |                  ^^^^ A hook cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(6): import {after} from 'node:test';\nafter(async (t, done) => { done(); }, {timeout: 1}); 1`] = `

  1 | import {after} from 'node:test';
  2 | after(async (t, done) => { done(); }, {timeout: 1});

`;

exports[`no-callback-and-promise > invalid(6): import {after} from 'node:test';\nafter(async (t, done) => { done(); }, {timeout: 1}); 2`] = `

Message:
  1 | import {after} from 'node:test';
> 2 | after(async (t, done) => { done(); }, {timeout: 1});
    |                 ^^^^ A hook cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(7): import {afterEach} from 'node:test';\nafterEach(async (t, done) => { done(); }, {timeout: 1}); 1`] = `

  1 | import {afterEach} from 'node:test';
  2 | afterEach(async (t, done) => { done(); }, {timeout: 1});

`;

exports[`no-callback-and-promise > invalid(7): import {afterEach} from 'node:test';\nafterEach(async (t, done) => { done(); }, {timeout: 1}); 2`] = `

Message:
  1 | import {afterEach} from 'node:test';
> 2 | afterEach(async (t, done) => { done(); }, {timeout: 1});
    |                     ^^^^ A hook cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(8): import test from 'node:test';\ntest.beforeEach(async (t, done) => { done(); }, {timeout: 1}); 1`] = `

  1 | import test from 'node:test';
  2 | test.beforeEach(async (t, done) => { done(); }, {timeout: 1});

`;

exports[`no-callback-and-promise > invalid(8): import test from 'node:test';\ntest.beforeEach(async (t, done) => { done(); }, {timeout: 1}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test.beforeEach(async (t, done) => { done(); }, {timeout: 1});
    |                           ^^^^ A hook cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(9): import {it} from 'node:test';\nit(\"x\", async (t, done) => { done(); }); 1`] = `

  1 | import {it} from 'node:test';
  2 | it("x", async (t, done) => { done(); });

`;

exports[`no-callback-and-promise > invalid(9): import {it} from 'node:test';\nit(\"x\", async (t, done) => { done(); }); 2`] = `

Message:
  1 | import {it} from 'node:test';
> 2 | it("x", async (t, done) => { done(); });
    |                   ^^^^ A test cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;
